fix VisibilityDisplay

--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -311,11 +311,13 @@
 .screen--prizes {
   background-color: $c-dark;
   opacity: 0;
-  transition: opacity 0.5s ease;
 
   &.active {
     opacity: 1;
-    transition-delay: 0.1s;
+    transition-property: opacity;
+    transition-duration: 0.3s;
+    transition-timing-function: ease;
+    transition-delay: 1s;
   }
 }
 
